--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  google_fonts: ^6.2.1
+  pretty_qr_code: ^3.3.0
+  intl: ^0.20.2
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
